--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@angular/platform-browser": "^8.0.2",
     "@angular/platform-browser-dynamic": "^8.0.2",
     "@angular/router": "^8.0.2",
+    "@ng-bootstrap/ng-bootstrap": "^5.0.0",
     "bootstrap": "^4.3.1",
     "core-js": "^3.1.4",
     "flat-icons": "^1.0.0",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.4.1",
     "owl.carousel": "^2.3.4",
     "rxjs": "^6.5.2",
     "slider-carousel": "^1.0.1",
